--- a/Starter-file/app/scss/layouts/_questionnaire.scss
+++ b/Starter-file/app/scss/layouts/_questionnaire.scss
@@ -4,6 +4,7 @@
 	font-family: 'Raleway';
 	font-weight: 100;
 	padding: 40px;
+	
 }
 
 .mm-survey-page.active {
@@ -15,7 +16,7 @@
 	border: 2px solid $color-blue;
 	background-color: rgba(16, 121, 173, 0.2);
 	color: $color-blue;
-	width: 5em;
+	width: 7em;
 	transition: .2s;
 	text-align: center;
 	text-decoration: none;
@@ -50,12 +51,12 @@
 	background-color: rgba(16, 121, 173, 0.2);
 	color: $color-blue;
 	transition: .2s;
-	margin-left: 46em;
+	margin-left: 42em;
 	text-align: center;
 	text-decoration: none;
 	display: inline-block;
 	
-	width: 5em;
+	width: 7em;
 	
 }
 
@@ -98,12 +99,8 @@
 	width: 100%;
 }
 
-
-
-.mm-survery-content label:hover {
-	cursor: pointer;
-	background-color:$color-blue ;
-	color: $color-orangy;
+.mm-survey-item{
+	margin-left: 15em;
 }
 
 .mm-survey-question {
@@ -118,9 +115,7 @@ input[type="radio"] {
 	
 	display: none;
 }
-.mm-survey-item{
-	margin-left: 15em;
-}
+
 input[type="radio"] + label {
 	
 	text-align: center;
@@ -137,11 +132,20 @@ input[type="radio"] + label {
 
 
 }
+input[type="radio"] label:checked  {
+	border: 2px solid grey;
+	background: transparent;
+}
+.mm-survery-content label:hover {
+	cursor: pointer;
+	background-color:$color-blue ;
+	color: $color-orangy;
+}
  
 .deg
 {
-	margin-left: -5em;
-    
+
+	margin-left: -8em; 
     width: 35em;
     padding: 0.22em;
     border:0.5px solid $color-button;
