--- a/Starter-file/app/scss/layouts/_initialstepper.scss
+++ b/Starter-file/app/scss/layouts/_initialstepper.scss
@@ -64,12 +64,16 @@
 
 
 .preambule{
+  
   font-weight: bold;
   padding:1em;
   margin: 11em;
   margin-top: -30em;
-  background-color: $backgroundcolor;
   
+}
+#first{
+  padding: 3em;
+  background-color: $backgroundcolor;
 }
    .tabs {
     padding-block-start: 2em;
