--- a/Starter-file/app/scss/layouts/_questionnaire.scss
+++ b/Starter-file/app/scss/layouts/_questionnaire.scss
@@ -1,20 +1,112 @@
+// .mm-survey {
+ 
+// }
+#second{
+    height: 31em;
+    width: 87%;
+    border: 1px solid rgb(190, 190, 190);
+    margin: 16px auto;
+    border-radius: 4px;
+    display: none;
+    margin-bottom: 50px;
+    overflow: hidden;
+}
+.progress{
+    height: 2em;
+    border-bottom: 1px solid rgb(190, 190, 190);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: -2px 0;
+    background-color: #f7f7f7;
+    border-radius: calc(.25rem - 1px) calc(.25rem - 1px) 0 0;
+   
+}
+.questcount{
+
+    font-weight: bolder;
+    margin-right: 1px;
+  
+}
+// .mm-survey-container {
+//     // border: 1px solid $color-grey;
+//     // background: #fafafa;
+//     // padding: 3em;
+// }
+
+
 
 .mm-survey-page {
 	display: none;
-	font-family: 'Raleway';
 	font-weight: 100;
-	padding: 40px;
-	
+	padding: 10px;
 }
+
 .mm-survey-page.active {
 	display: block;
 }
 
+.mm-survey-controller {
+	position: relative;
+    height: 60px;
+    padding: 12px 14px;
+}
 
-#back{
-	border: 2px solid $color-blue;
-	background-color: rgba(16, 121, 173, 0.2);
-	color: $color-blue;
+
+
+.mm-back-btn {
+	display: inline-block;
+    position: relative;
+    float: left;
+    margin-top: 4em;
+    display: block;
+    margin-left: 17em;
+    margin-right: auto;
+   font-weight: bold;
+   background-color: $color-button;
+   border: 2px solid $color-blue;
+   color: $color-blue;
+   border-radius: -15px;
+   text-align: center;
+   display: inline-block;
+   font-size: 16px;
+   width: 12em;
+   &:hover{
+   color:  $color-white;
+   background:  $color-blue;
+   }
+}
+
+.mm-prev-btn {
+	display: inline-block;
+    position: relative;
+    float: left;
+}
+
+.mm-next-btn {
+	display: inline-block;
+	opacity: 0.25;
+    position: relative;
+    float: right;
+}
+
+.mm-finish-btn {
+	display: none;
+    position: relative;
+    float: right;
+}
+
+
+
+.mm-survey-controller  {
+    button
+    {
+        margin-top: 2em;
+        background-position: center;
+       border: 2px solid $color-blue;
+        border-radius: 5px;   
+	   background-color: rgba(16, 121, 173, 0.2);
+	  color: $color-blue;
 	width: 7em;
 	transition: .2s;
 	text-align: center;
@@ -24,50 +116,23 @@
 	margin: 4px 2px;
 	cursor: pointer;
     
-}
-
-.mm-finish-btn {
-	display: none;
-	position: relative;
-	width: 8em;
-  
-}
-
-.mm-finish-btn button {
-	border: 2px solid $color-blue;
-	background-color: rgba(16, 121, 173, 0.2);
-	color: $color-blue;
-	transition: .2s;
-	margin-left: 58em;
-	text-align: center;
-	text-decoration: none;
-	display: inline-block;
-	width: 8em;
-}
-
-.mm-survey-controller button {
-	border: 2px solid $color-blue;
-	background-color: rgba(16, 121, 173, 0.2);
-	color: $color-blue;
-	transition: .2s;
-	margin-left: 42em;
-	text-align: center;
-	text-decoration: none;
-	display: inline-block;
-	
-	width: 7em;
+        &:hover {
+            background-color: $color-blue;
+            color: $color-orangy;
+    
+        }
+    }
 	
 }
-
-
-
 .mm-survey-progress {
-	margin-left: 3em;
-	margin-top: -1.5em;
-	border-radius: 1em;
-	width: 95%;
-	height: 10px;
-	background-color: $color-button;
+    margin-left: 1em;
+    margin-top: 0em;
+    border-radius: 1em;
+    width: 90%;
+    height: 10px;
+    background-color: $color-button;
+ 
+ 
 }
 
 .mm-progress {
@@ -87,84 +152,146 @@
 	padding: 0px;
 }
 
-.mm-survey-q li {
-	display: block;
-	margin-bottom: 10px;
-	width: 100%;
-	background: #fff;
-}
+.mm-survey-q  {
+    li
+    {
+        display: block;
+        margin-bottom: 10px;
+        width: 100%;
+        background: #fff;
+    }
+    }
+	
 
 .mm-survey-q li input {
 	width: 100%;
 }
 
-.mm-survey-item{
-	margin-left: 15em;
+
+
+.mm-survery-content label:hover {
+	cursor: pointer;
 }
 
 .mm-survey-question {
-	text-align: center;
-	min-height: 100px;
-    color: $color-grey;
+    min-height: 100px;
     font-weight: bold;
-    font-size: 1em;
+    font-size: 1.5em;
+    p
+    {
+     font-weight: bold;
+     font-size: 2em;
+     text-align: center;
+     padding-bottom: 1em;
+    }
 }
 
-input[type="radio"] {
-	
-	display: none;
-}
 
-input[type="radio"] + label {
-	
-	text-align: center;
-	border: 3px solid #1078AD;
-    color: #1078AD;
-    font-weight: 500;
-    transition: .5s;
+
+.mm-survery-content label p {
 	display: inline-block;
-	margin: 2px 4px 0 0;
-	vertical-align: middle;
-	width: 99px;
-    height: 65px;
-    border-radius: 5px;
-
-
-}
-input[type="radio"] label:checked  {
-	border: 2px solid grey;
-	background: transparent;
-}
-.mm-survery-content label:hover {
-	cursor: pointer;
-	background-color:$color-blue ;
-	color: $color-orangy;
-}
- 
-.deg
-{
-
-	margin-left: -8em; 
-    width: 35em;
-    padding: 0.22em;
-    border:0.5px solid $color-button;
-
-}
-
-#questCount{
-	margin-top: -1em;
-    margin-left: -57em;
-
+    position: relative;
+    top: 2px;
+    left: 5px;
+    margin: 0px;
 }
 
 
 
+.mm-survey-item {
+	margin-bottom: 15px;
+    border-radius: 0px 0px 4px 4px;
+}
 
+.mm-prev-btn button:focus, .mm-next-btn button:focus, .mm-finish-btn button:focus {
+	outline: none;
+	border: none;
+}
+
+.mm-survey.okay .mm-next-btn {
+	display: inline-block;
+	opacity: 1;
+}
 
 .mm-finish-btn.active {
 	display: inline-block;
 }
 
+
+.mm-item-number {
+	height: 40px;
+	position: relative;
+	padding: 17px;
+	background: $color-grey;
+	color: #fff;
+}
+
 .mm-item-info {
 	float: right;
 }
+
+input[type=radio]
+{
+    display: none;
+}
+input[type=radio] + label {
+    margin-top: 2em;
+    display: block;
+    border: 3px solid $color-blue;
+    padding: 1em 0em 0em;
+    margin-right: 1em;
+    text-align: center;
+    color:$color-blue;
+    font-weight: bold;
+    font-size: 1em;
+    width:7em;
+    border-radius:6px;
+  } 
+
+
+input[type=radio]:checked + label {
+    background-color:$color-blue;
+   color:$color-orangy;
+  } 
+.mm-survey-item
+{
+    display: flex;
+    justify-content: center;
+
+}
+.lab
+{
+    margin-top: 2em;
+    border: 1px solid $color-grey;
+    margin-left: -0.25em;
+   border-left: none;
+   width: 3em;
+   text-align: center;
+   color: $color-blue;
+   background-color:$backgroundcolor;
+
+  
+    
+}
+.deg
+{
+    margin-top: 2em;
+    width: 35em;
+    border:0.5px solid $color-grey;
+     
+}
+.fas{
+    font-size: 20px;
+}
+.imoji
+{
+   font-size:2em;
+   
+}
+.mm-survey-results{
+    padding: 3em;
+    background-color: $backgroundcolor;
+}
+
+
+
