--- a/Starter-file/app/css/styles.css
+++ b/Starter-file/app/css/styles.css
@@ -429,22 +429,21 @@
   display: inline-block;
   position: relative;
   float: left;
-  margin-top: 4em;
-  display: block;
-  margin-left: 17em;
-  margin-right: auto;
-  font-weight: bold;
-  background-color: #BCDAEA;
-  border: 2px solid #1078AD;
-  color: #1078AD;
-  border-radius: -15px;
-  text-align: center;
-  display: inline-block;
-  font-size: 16px;
-  width: 12em; }
-  .mm-back-btn:hover {
-    color: #FFF;
-    background: #1078AD; }
+  margin-top: 4em; }
+  .mm-back-btn button {
+    margin-left: 17em;
+    margin-right: auto;
+    font-weight: bold;
+    background-color: #BCDAEA;
+    border: 2px solid #1078AD;
+    color: #1078AD;
+    border-radius: -15px;
+    text-align: center;
+    font-size: 16px;
+    width: 12em; }
+    .mm-back-btn button:hover {
+      color: #FFF;
+      background: #1078AD; }
 
 .mm-prev-btn {
   display: inline-block;
