--- a/Starter-file/app/scss/layouts/_questionnaire.scss
+++ b/Starter-file/app/scss/layouts/_questionnaire.scss
@@ -59,22 +59,24 @@
     position: relative;
     float: left;
     margin-top: 4em;
-    display: block;
-    margin-left: 17em;
-    margin-right: auto;
-   font-weight: bold;
-   background-color: $color-button;
-   border: 2px solid $color-blue;
-   color: $color-blue;
-   border-radius: -15px;
-   text-align: center;
-   display: inline-block;
-   font-size: 16px;
-   width: 12em;
-   &:hover{
-   color:  $color-white;
-   background:  $color-blue;
-   }
+    button{
+        margin-left: 17em;
+        margin-right: auto;
+       font-weight: bold;
+       background-color: $color-button;
+       border: 2px solid $color-blue;
+       color: $color-blue;
+       border-radius: -15px;
+       text-align: center;
+      font-size: 16px;
+       width: 12em;
+       &:hover{
+       color:  $color-white;
+       background:  $color-blue;
+       }
+    }
+    
+  
 }
 
 .mm-prev-btn {
